use worker and ensure exit

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "url": "https://github.com/Theadd/bittorrent-tracker-scrape/issues"
   },
   "dependencies": {
-    "bittorrent-tracker": "git+https://git@github.com/Theadd/bittorrent-tracker.git"
+    "bittorrent-tracker": "git+https://git@github.com/Theadd/bittorrent-tracker.git",
+    "worker-farm": "^1.0.1"
   },
   "homepage": "https://github.com/Theadd/bittorrent-tracker-scrape",
   "keywords": [
