--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "url": "https://github.com/Theadd/bittorrent-tracker-scrape/issues"
   },
   "dependencies": {
-    "bittorrent-tracker": "^2.7.0",
+    "bittorrent-tracker": "^3.1.2",
+    "node.extend": "^1.1.3",
+    "read-torrent": "^1.3.0",
+    "webtorrent": "^0.27.2",
     "worker-farm": "^1.0.1"
   },
   "homepage": "https://github.com/Theadd/bittorrent-tracker-scrape",
